--- a/osgoode-chiropractic/index.html
+++ b/osgoode-chiropractic/index.html
@@ -15,6 +15,7 @@
     <!-- MAIN -->
     <body>
         <header>
+            <!-- ---------------------------------------------NAV------------------------------------ -->
             <nav class="navbar navbar-light fixed-top navbar-expand-md bg-white shadow-lg">
                 <div class="container">
                   <a class="navbar-brand" href="#"><img src="images/Chiro-logo.svg" alt="" class="d-inline-block pe-2" width="60">Osgoode Chiropractic Clinic</a>
@@ -29,13 +30,16 @@
                       <li class="nav-item col-2">
                           <a href="#About-us" class="nav-link">About Us</a>
                       </li>
+                      <li class="nav-item col-2">
+                        <a href="#new-clients" class="nav-link">New Clients</a>
+                    </li>
                     </ul>
                   </div>
                 </div>
               </nav>
           </header>
 
-            <!-- Top content -->
+            <!----------------------------------- Top content ------------------------------->
             <div class="top-content">
                 <!-- Carousel -->
                 <div id="carousel-example" class="carousel slide shadow-md" data-bs-ride="carousel" >
@@ -55,7 +59,7 @@
                 <!-- End carousel -->
             </div>
 
-            <!-- Info Section -->
+            <!--------------------------- Info Section ------------------------>
             <section class="container pt-md-5 pb-md-5" id="gen-info">
                 <section class="container pt-3 pb-4 " >
                     <div class="row">
@@ -93,7 +97,7 @@
                 </section>
             </section>
 
-            <!-- About Us -->
+            <!--------------------------------------- About Us ---------------------------->
 
             <section class="container pb-5 pt-md-5 shadow-lg" id="About-us">
                 <div class="row pb-4">
@@ -135,6 +139,22 @@
                             Upon completing my nursing studies at the University of Ottawa, I attended Canadian Memorial Chiropractic College (CMCC ) in Toronto.  While I studiedchiropractic, I also studied various soft tissue and myofascial therapies as well as acupuncture.</p>
                             <p>I have a keen interest in sports related injuries however I believe that everyone can benefit from chiropractic care.  I have treated everyone in allstages in life including the newborn who experienced a very rough delivery, to the athlete recovering from labrum surgery in his shoulder, to the 107 yearold who simply wanted to continue to be well.</p>
                             <p>On a personal note, I am very happily married and blessed with a daughter and son. Sports has always been part of my upbringing and I continue toparticipate in many activities to this day whether it be playing basketball, tennis, going for a run or hopping on my bike for a ride.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- --------------------NEW CLIENTS----------------------------------- -->
+
+            <section class="container-fluid pb-5 mt-5 shadow-lg vh-100" id="new-clients">
+                <div class="container vh-100 row align-items-center mx-auto" id="landing">
+                    <div class="col-md-8 col-12 shadow-lg p-3 mb-5 rounded row mx-auto bg-white">
+                        <div class="col-md-8 col-12">
+                            <h5 class="h1">New Clients are always welcome or something</h5>
+                            <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins,     responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
+                        </div>
+                        <div class="col-md-4 col-12 my-auto gap-2">
+                            <button class="btn btn-primary w-100 p-3">Download Form</button>
                         </div>
                     </div>
                 </div>
