--- a/osgoode-chiropractic/index.html
+++ b/osgoode-chiropractic/index.html
@@ -24,15 +24,18 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav container-lg justify-content-end text-center">
-                      <li class="nav-item col-2">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item col-2">
-                          <a href="#About-us" class="nav-link">About Us</a>
-                      </li>
-                      <li class="nav-item col-2">
-                        <a href="#new-clients" class="nav-link">New Clients</a>
-                    </li>
+                        <li class="nav-item col-2">
+                          <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item col-2">
+                            <a href="#About-us" class="nav-link">About Us</a>
+                        </li>
+                        <li class="nav-item col-2">
+                           <a href="#new-clients" class="nav-link">New Clients</a>
+                        </li>
+                        <li class="nav-item col-2">
+                            <a href="#contact-us" class="nav-link">Contact Us</a>
+                         </li>
                     </ul>
                   </div>
                 </div>
@@ -60,10 +63,10 @@
             </div>
 
             <!--------------------------- Info Section ------------------------>
-            <section class="container pt-md-5 pb-md-5" id="gen-info">
-                <section class="container pt-3 pb-4 " >
+            <section class="container pt-md-5 pb-md-4" id="gen-info">
+                <section class="container pt-1 pb-4" >
                     <div class="row">
-                        <div class="divider-1 text-center  pb-4"><span></span></div>
+                        <div class="divider-1 text-center  pb-5"><span></span></div>
                     </div>
                     <div class="row mx-auto">
                         <div class="col-lg-4 col-md-12 row mx-auto">
@@ -110,7 +113,7 @@
                 <div class="row pt-5">
                     <div class="col-md-4 col-12">
                         <div class="col-12 shadow-lg rounded-3 p-3 h-100">
-                            <img src="https://picsum.photos/id/2/500" alt="" class="pt-5 rounded-circle col-10 mx-auto d-block pb-2">
+                            <img src="https://picsum.photos/id/2/500" alt="" class="mt-5 rounded-circle col-10 mx-auto d-block mb-2">
                             <h3 >Dr. Jennifer J. Bergin, D.C.</h3>
                             <h4 class="fst-italic fs-6 text-muted pb-1">Chiropractor / Regenerative Healer</h4>
                             <p>I graduated from Canadian Memorial Chiropractic College (CMCC) in 1996 and have been treating conditions such as: low back pain, mid-back pain, neckpain, sciatica, headaches, migraines, sprains and strains and improving flexibility and posture for approximately 20 years.</p>
@@ -121,7 +124,7 @@
                     </div>
                     <div class="col-md-4 col-12">
                         <div class="p-3 col-12 shadow-lg rounded-3 h-100">
-                            <img src="https://picsum.photos/id/1/500" alt="" class="pt-5 rounded-circle col-10 mx-auto d-block pb-auto">
+                            <img src="https://picsum.photos/id/1/500" alt="" class="mt-5 rounded-circle col-10 mx-auto d-block mb-2">
                             <h3 >Dr. Angelo B. David, B.Sc.N., D.C.</h3>
                             <h4 class="fst-italic fs-6 text-muted pb-1">Chiropractor</h4>
                             <p>While in nursing school, I began to have very bad migraines that were causing me to miss my hospital rotations.  That led me to see a Chiropractor andthe results were amazing.  This opened my eyes to a whole other world of drug-free health care and eventually brought me to chiropractic school.
@@ -132,7 +135,7 @@
                     </div>
                     <div class="col-md-4 col-12">
                         <div class="p-3 col-12 shadow-lg rounded-3 h-100">
-                            <img src="https://picsum.photos/id/15/500" alt="" class="pt-5 rounded-circle col-10 mx-auto d-block pb-2">
+                            <img src="https://picsum.photos/id/15/500" alt="" class="mt-5 rounded-circle col-10 mx-auto d-block mb-2">
                             <h3 >Dr. Angelo B. David, B.Sc.N., D.C.</h3>
                             <h4 class="fst-italic fs-6 text-muted pb-1">Chiropractor</h4>
                             <p>While in nursing school, I began to have very bad migraines that were causing me to miss my hospital rotations.  That led me to see a Chiropractor andthe results were amazing.  This opened my eyes to a whole other world of drug-free health care and eventually brought me to chiropractic school.
@@ -146,19 +149,180 @@
 
             <!-- --------------------NEW CLIENTS----------------------------------- -->
 
-            <section class="container-fluid pb-5 mt-5 shadow-lg vh-100" id="new-clients">
+            <section class="container-fluid mt-5 shadow-lg vh-100" id="new-clients">
                 <div class="container vh-100 row align-items-center mx-auto" id="landing">
-                    <div class="col-md-8 col-12 shadow-lg p-3 mb-5 rounded row mx-auto bg-white">
-                        <div class="col-md-8 col-12">
+                    <div class="col-lg-8 col-12 shadow-lg p-3 mb-5 rounded row mx-auto bg-white">
+                        <div class="col-xl-8 col-12">
                             <h5 class="h1">New Clients are always welcome or something</h5>
                             <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins,     responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
                         </div>
-                        <div class="col-md-4 col-12 my-auto gap-2">
+                        <div class="col-xl-4 col-12 my-auto gap-2">
                             <button class="btn btn-primary w-100 p-3">Download Form</button>
                         </div>
                     </div>
                 </div>
             </section>
+
+            <!-- --------------------------CONTACT US------------------------------ -->
+
+            <section class="container mt-5 pb-5" id="contact-us">
+                <div class="row mb-5">
+                    <div class="col-xl-6">
+                        <h5 class="h1">Contact us!</h5>
+                        <p>INSERT CONTACT INFO HERE</p>
+                    </div>
+                    <div class="col-xl-6">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11255.66524026063!2d-75.60374017571223!3d45.1482916699098!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x656c741732104444!2sOsgoode%20Chiropractic%20Clinic!5e0!3m2!1sen!2sca!4v1629295049012!5m2!1sen!2sca" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xl-4 col-12">
+                        <div class="p-2 col-12 shadow-lg">
+                            <h5 class="h4">Dr. Jennifer Bergin</h5>
+                            <p class="fst-italic fs-6 text-muted">Chiropractic</p>
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Day</th>
+                                        <th scope="col">Hours</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">Monday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Tuesday</th>
+                                        <td>2:30pm - 7:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Wednesday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Thursday</th>
+                                        <td>2:30pm - 7:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Friday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Saturday</th>
+                                        <td>9:00am - 2:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Sunday</th>
+                                        <td>Closed</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-12">
+                        <div class="col-12 shadow-lg p-2">
+                            <h5 class="h4">Dr. Angelo David</h5>
+                            <p class="fst-italic fs-6 text-muted">Chiropractic</p>
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Day</th>
+                                        <th scope="col">Hours</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">Monday</th>
+                                        <td>2:00pm - 6:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Tuesday</th>
+                                        <td>9:00am - 11:00am</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Wednesday</th>
+                                        <td>2:00pm - 6:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Thursday</th>
+                                        <td>9:00am - 11:00am</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Friday</th>
+                                        <td>8:00am - 12:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Saturday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Sunday</th>
+                                        <td>Closed</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-12">
+                        <div class="col-12 shadow-lg p-2">
+                            <h5 class="h4">Matthew Cameron R.M.T.</h5>
+                            <p class="fst-italic fs-6 text-muted">Massage Therapy</p>
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Day</th>
+                                        <th scope="col">Hours</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">Monday</th>
+                                        <td>11:30am - 4:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Tuesday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Wednesday</th>
+                                        <td>11:30am - 4:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Thursday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Friday</th>
+                                        <td>11:30am - 4:00pm</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Saturday</th>
+                                        <td>Unavailable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Sunday</th>
+                                        <td>Closed</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- -------------------------------footer---------------------------------- -->
+            <footer class="bg-white shadow-lg">
+                <div class="list-group list-group-horizontal-lg list-group-flush border-0 container">
+                  <a href="#" class="list-group-item col-xl-2 ">Home</a>
+                  <a class="list-group-item  col-xl-2 col-12" href="#about-us">About Us</a>
+                  <a class="list-group-item  col-xl-2 col-12" href="#new-clients">New-clients</a>
+                  <a class="list-group-item  col-xl-2 col-12" href="#contact-us">Contact Us</a>
+                  <p class="list-group-item  col-xl-2 col-12">© Adison Rossiter 2021</p>
+                </div>
+            </footer>
+
 
 
                   
