--- a/osgoode-chiropractic/index.html
+++ b/osgoode-chiropractic/index.html
@@ -157,7 +157,7 @@
                             <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins,     responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
                         </div>
                         <div class="col-xl-4 col-12 my-auto gap-2">
-                            <button class="btn btn-primary w-100 p-3">Download Form</button>
+                            <a href="/forms/Osgoode-Chiropractic-new-patient-forms.pdf" download class="btn btn-primary w-100 p-3">Download Form</a>
                         </div>
                     </div>
                 </div>
