--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -11,18 +11,16 @@
     <title>adiross</title>
 </head>
 <body>
-    <div class="container" id="app">
+    <div class="" id="app">
         <div class="pure-g">
-            <div class="pure-u-1-3" v-for="post in posts">
-                <div class="pure-g post">
-                    <img src="https://picsum.photos/300/200" alt="temp" class="pure-img pure-u-2-5 boxImg">
-                    <div class="pure-u-3-5">
-                        <div class="boxText">
-                            <h3>{{post.title}}</h3>
-                            <p>{{wordCut(post.text)}}</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="pure-u-1-3 photo-box" v-for="post in posts">
+                <img src="https://picsum.photos/300/200" alt="temp" class="">
+                <aside class="photo-box-caption">
+                    <span class="">
+                        <h3>{{post.title}}</h3>
+                        <p>{{wordCut(post.text)}}</p>
+                    </span>
+                </aside>
             </div>
         </div>
     </div>
