--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </header>
     
-    <!-- -----------------------body----------------------------- -->
+    <!-- -----------------------body   ----------------------------- -->
 
     <main>
 
